# rblake2sum

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  flake.nix
.config/flakebox/: id
.github/workflows/: flakebox-ci.yml  flakebox-flakehub-publish.yml
ci/: prep_deploy.sh  travis-musl-openssl.sh
misc/git-hooks/: pre-commit
src/: main.rs  opts.rs
