[package]
name = "rblake2sum"
version = "0.3.1"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
edition = "2018"
description = "Calculate recursive blake2 digest for path or directory"
keywords = ["data", "filesystem", "digest", "hash"]
license = "MPL-2.0 OR MIT OR Apache-2.0"
documentation = "https://docs.rs/rblake2sum"
homepage = "https://github.com/crev-dev/rblake2sum"
repository = "https://github.com/crev-dev/rblake2sum"
readme = "README.md"

[dependencies]
anyhow = "1.0.71"
base64 = "0.21"
blake2 = "0.10.6"
crev-recursive-digest = { version = "0.6.0" }
hex = "0.4"
clap = { version = "4.2.7", features = ["derive"] }


[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.ci]
inherits = "dev"
debug = 1
incremental = false

# Workaround: https://github.com/rust-lang/cargo/issues/12457 which causes
#             https://github.com/ipetkov/crane/issues/370
[profile.dev.build-override]
debug = false
[profile.ci.build-override]
debug = false
[profile.release.build-override]
debug = false
